--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "bugs": {
     "url": "https://github.com/robotlolita/phemme/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "escodegen": "^1.3.3",
+    "ometajs": "^3.3.6"
+  },
   "devDependencies": {
     "alright": "^1.0.0",
     "browserify": "^3.33.0",
