--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "escodegen": "^1.3.3",
-    "ometajs": "^3.3.6"
+    "ometajs": "^3.3.6",
+    "xtend": "^3.0.0"
   },
   "devDependencies": {
     "alright": "^1.0.0",
