--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "escodegen": "^1.3.3",
+    "esprima": "^1.2.2",
     "ometajs": "^3.3.6",
     "xtend": "^3.0.0"
   },
