--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "url": "https://github.com/robotlolita/phemme/issues"
   },
   "dependencies": {
+    "core.lambda": "^1.0.0",
+    "docopt": "^0.4.0",
     "escodegen": "^1.3.3",
     "esprima": "^1.2.2",
     "ometajs": "^3.3.6",
