--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "escodegen": "^1.3.3",
     "esprima": "^1.2.2",
     "ometajs": "^3.3.6",
+    "stable": "^0.1.5",
     "xtend": "^3.0.0"
   },
   "devDependencies": {
