--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "core.lambda": "^1.0.0",
+    "deep-equal": "^0.2.1",
     "docopt": "^0.4.0",
     "escodegen": "^1.3.3",
     "esprima": "^1.2.2",
