Renames to Purr.
--HG--
rename : Platform/Concurrency/Async.phemme => Platform/Concurrency/Async.purr
rename : Platform/Concurrency/Timers.phemme => Platform/Concurrency/Timers.purr
rename : Platform/Control/Monad.phemme => Platform/Control/Monad.purr
rename : Platform/Data/Boolean.phemme => Platform/Data/Boolean.purr
rename : Platform/Data/Char.phemme => Platform/Data/Char.purr
rename : Platform/Data/Either.phemme => Platform/Data/Either.purr
rename : Platform/Data/Function.phemme => Platform/Data/Function.purr
rename : Platform/Data/Maybe.phemme => Platform/Data/Maybe.purr
rename : Platform/Data/Number.phemme => Platform/Data/Number.purr
rename : Platform/Data/Record.phemme => Platform/Data/Record.purr
rename : Platform/Data/String.phemme => Platform/Data/String.purr
rename : Platform/Data/Tuple.phemme => Platform/Data/Tuple.purr
rename : Platform/Data/Validation.phemme => Platform/Data/Validation.purr
rename : Platform/Data/Vector.phemme => Platform/Data/Vector.purr
rename : Platform/Debug/Trace.phemme => Platform/Debug/Trace.purr
rename : Platform/Io/Console.phemme => Platform/Io/Console.purr
rename : Platform/Io/FileSystem.phemme => Platform/Io/FileSystem.purr
rename : Platform/Io/FileSystem/Path.phemme => Platform/Io/FileSystem/Path.purr
rename : Platform/Io/Plan.phemme => Platform/Io/Plan.purr
rename : Platform/Io/Task.phemme => Platform/Io/Task.purr
rename : Platform/Prelude.phemme => Platform/Prelude.purr
rename : Platform/Phemme/Core.phemme => Platform/Purr/Core.purr
rename : Platform/Web/Server.phemme => Platform/Web/Server.purr
rename : examples/hello-world/HelloWorld.phemme => examples/hello-world/HelloWorld.purr
extra : amend_source : 47c4e386acf6975a2fb0c22ac4c2297b1e8a9938

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phemme",
+  "name": "Purr",
   "version": "0.0.0",
   "description": "A small, portable functional language for writing highly concurrent web servers.",
   "main": "lib/index.js",
@@ -8,13 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/robotlolita/phemme"
+    "url": "https://github.com/robotlolita/purr"
   },
   "keywords": [],
   "author": "Quildreen Motta",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/robotlolita/phemme/issues"
+    "url": "https://github.com/robotlolita/purr/issues"
   },
   "dependencies": {
     "core.lambda": "^1.0.0",
